--- a/client/Masterarbeit.Frontend/Views/Shared/_Layout.cshtml
+++ b/client/Masterarbeit.Frontend/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="UpdateImage" asp-action="Index">Update</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="UploadImage" asp-action="Index">Upload image</a></li>
+                    <li><a asp-area="" asp-controller="FixedWord" asp-action="Index">FixedWords</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
