--- a/client/Masterarbeit.Frontend/Views/UploadImage/Index.cshtml
+++ b/client/Masterarbeit.Frontend/Views/UploadImage/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-2"></div>
-    <div class="col-md-10"><input type="file" name="myfiles" placeholder="Choose file..." multiple="multiple" accept="image/*"/></div>
+    <div class="col-md-10"><input type="file" name="myfiles" placeholder="Choose file..." multiple="multiple" accept="image/*;capture=camera"/></div>
 </div>
 
 <div class="row">
@@ -23,5 +23,5 @@
 </div>
 
 <div class="row">
-    <a asp-controller="UpdateImage" asp-action="TagImage">Weiter</a>
+    <a asp-controller="UploadImage" asp-action="TagImage">Weiter</a>
 </div>
