OCR sowie Anzeige der erkannten Worte hinzugefügt

--- a/client/Masterarbeit.Frontend/Views/Image/Upload.cshtml
+++ b/client/Masterarbeit.Frontend/Views/Image/Upload.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div>*@
 
-<form method="post" enctype="multipart/form-data" asp-controller="UploadImage" asp-action="UploadFiles">
+<form method="post" enctype="multipart/form-data" asp-controller="Image" asp-action="UploadFiles">
     <div class="row">
         <div class="col-md-6"><input class="col-md-6" type="file" name="files" onchange="previewFile()" multiple /></div>
         <div class="col-md-6"><input type="submit" class="btn btn-default" value="Upload" style="text-align: right" /></div>
