--- a/client/Masterarbeit.Frontend/Views/Shared/_Layout.cshtml
+++ b/client/Masterarbeit.Frontend/Views/Shared/_Layout.cshtml
@@ -30,12 +30,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Masterarbeit.Frontend</a>
+                <a asp-area="" asp-controller="Image" asp-action="Index" class="navbar-brand">Masterarbeit.Frontend</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="UploadImage" asp-action="Index">Upload image</a></li>
+                    <li><a asp-area="" asp-controller="Image" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Image" asp-action="Upload">Upload image</a></li>
                     <li><a asp-area="" asp-controller="FixedWord" asp-action="Index">FixedWords</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
